[gd_scene load_steps=7 format=2]

[ext_resource path="res://LibraryGame.gd" type="Script" id=1]
[ext_resource path="res://Graphics/hangman.png" type="Texture" id=2]
[ext_resource path="res://Fonts/BLKCHCRY copy.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/SpecialElite copy.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="LibraryGame" type="Node2D"]
script = ExtResource( 1 )

[node name="hangman" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 944.661, 716.271 )
scale = Vector2( 0.647432, 0.772706 )
texture = ExtResource( 2 )

[node name="UserInput" type="TextEdit" parent="."]
margin_left = 669.0
margin_top = 721.0
margin_right = 1457.0
margin_bottom = 935.0
custom_fonts/font = SubResource( 1 )

[node name="CopyText" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 156.19
margin_top = 132.502
margin_right = 1198.19
margin_bottom = 408.502
custom_fonts/normal_font = SubResource( 2 )

[node name="CopiedText" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 842.55
margin_top = 408.105
margin_right = 1884.55
margin_bottom = 684.105
custom_fonts/normal_font = SubResource( 2 )

[node name="CurrWord" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 147.851
margin_top = 760.104
margin_right = 784.851
margin_bottom = 1036.1
custom_fonts/normal_font = SubResource( 2 )
text = "type "
